@@ -1,13 +1,23 @@
 <?php
 /*<wikitext>
-{| border=1
-| <b>File</b> || RecentChangesManager.php
-|-
-| <b>Revision</b> || $Id$
-|-
-| <b>Author</b> || Jean-Lou Dupont
-|}<br/><br/>
- 
+{{Extension
+|name        = RecentChangesManager
+|status      = stable
+|type        = other
+|author      = [[user:jldupont|Jean-Lou Dupont]]
+|image       =
+|version     = See SVN ($Id$)
+|update      =
+|mediawiki   = tested on 1.10 but probably works with a earlier versions
+|download    = [http://bizzwiki.googlecode.com/svn/trunk/BizzWiki/extensions/RecentChangesManager/ SVN]
+|readme      =
+|changelog   =
+|description = 
+|parameters  =
+|rights      =
+|example     =
+}}
+
 == Purpose==
 Prevents RecentChanges table entries from being deleted.
 
@@ -15,49 +25,47 @@ Prevents RecentChanges table entries from being deleted.
 
 
 == Dependancy ==
-* [[Extension:ExtensionClass|ExtensionClass]]
+* [[Extension:StubManager]]
 
 == Installation ==
 To install independantly from BizzWiki:
-* Download 'ExtensionClass' extension
 * Apply the following changes to 'LocalSettings.php'
 <source lang=php>
-require('extensions/ExtensionClass.php');
-require('extensions/RecentChangesManager/RecentChangesManager.php');
+require('extensions/StubManager.php');
+StubManager::createStub(	'RecentChangesManager', 
+							'extensions/RecentChangesManager/RecentChangesManager.php',
+							null,					// i18n file			
+							array('ArticleEditUpdatesDeleteFromRecentchanges'),	// hooks
+							false, 					// no need for logging support
+							null,					// tags
+							null,					// parser Functions
+							null
+						 );
 </source>
 
 == History ==
+* Removed dependency on ExtensionClass
+* Added 'stubbing' capability through StubManager
 
 == Code ==
 </wikitext>*/
 
-class RecentChangesManager extends ExtensionClass
+$wgExtensionCredits[RecentChangesManager::thisType][] = array( 
+	'name'    		=> RecentChangesManager::thisName, 
+	'version'     	=> StubManager::getRevisionId( '$Id$' ),
+	'author'  		=> 'Jean-Lou Dupont', 
+	'description' 	=> "Prevents RecentChanges entries from being deleted",
+	'url' 			=> StubManager::getFullUrl(__FILE__),			
+);
+
+class RecentChangesManager
 {
 	const thisName = 'RecentChangesManager';
 	const thisType = 'other';  // must use this type in order to display useful info in Special:Version
-	const id       = '$Id$';	
-	
-	public static function &singleton( )
-	{ return parent::singleton( ); }
 	
 	// Our class defines magic words: tell it to our helper class.
-	public function __construct() 
-	{ 
-		parent::__construct( ); 
+	public function __construct() {}
 	
-		global $wgExtensionCredits;
-		$wgExtensionCredits[self::thisType][] = array( 
-			'name'    => self::thisName, 
-			'version'     => self::getRevisionId( self::id ),
-			'author'  => 'Jean-Lou Dupont', 
-			'description' => "Prevents RecentChanges entries from being deleted",
-			'url' => self::getFullUrl(__FILE__),			
-		);
-	}
-	
-	public function setup()
-	{	parent::setup(); }
-
 	public function hArticleEditUpdatesDeleteFromRecentchanges( &$article )
 	{
 		// don't delete entries from RecentChanges
@@ -65,6 +73,4 @@ class RecentChangesManager extends ExtensionClass
 	}
 
 } // end class definition.
-
-RecentChangesManager::singleton();
 ?>
